{
  "version": 4,
  "terraform_version": "1.15.1",
  "serial": 154,
  "lineage": "b7636b64-477b-ce97-ab3e-a8fdf47863ee",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraweek_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f4e1ea09e6b8e18a",
            "arn": "arn:aws:ec2:us-west-2:050451370848:instance/i-0a0c3fdab14b1b7bc",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a0c3fdab14b1b7bc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0eb17d28efa1afbef",
            "private_dns": "ip-10-0-1-11.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.11",
            "public_ip": "35.91.133.70",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a2064c6f8dbc531b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01de9b525c6cf1dff",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "terraweek-dev-Server",
              "Project": "terraweek"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "terraweek-dev-Server",
              "Project": "terraweek"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ed85dce282a9d156"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.terraweek_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.terraweek_vpc",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:050451370848:internet-gateway/igw-0550f6d5472d61045",
            "id": "igw-0550f6d5472d61045",
            "owner_id": "050451370848",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "terraweek-dev-IGW",
              "Project": "terraweek"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "terraweek-dev-IGW",
              "Project": "terraweek"
            },
            "vpc_id": "vpc-0fe8123815f6f57a8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.terraweek_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:050451370848:route-table/rtb-0dd3c1d911d344e6c",
            "id": "rtb-0dd3c1d911d344e6c",
            "owner_id": "050451370848",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0550f6d5472d61045",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "terraweek-dev-RT",
              "Project": "terraweek"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "terraweek-dev-RT",
              "Project": "terraweek"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe8123815f6f57a8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.terraweek_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066c96cc5e6c0c15d",
            "route_table_id": "rtb-0dd3c1d911d344e6c",
            "subnet_id": "subnet-01de9b525c6cf1dff"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.terraweek_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraweek_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:050451370848:security-group/sg-0ed85dce282a9d156",
            "description": "Allow SSH and HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ed85dce282a9d156",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraweek-dev-sg",
            "name_prefix": "",
            "owner_id": "050451370848",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "terraweek-SG",
              "Project": "terraweek"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "terraweek-SG",
              "Project": "terraweek"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe8123815f6f57a8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.terraweek_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:050451370848:subnet/subnet-01de9b525c6cf1dff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01de9b525c6cf1dff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "050451370848",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "terraweek-dev-Subnet",
              "Project": "terraweek"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "terraweek-dev-Subnet",
              "Project": "terraweek"
            },
            "vpc_id": "vpc-0fe8123815f6f57a8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.terraweek_vpc",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraweek_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:050451370848:vpc/vpc-0fe8123815f6f57a8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09a0c168de09a690c",
            "default_route_table_id": "rtb-0cea9bd07a1bb4034",
            "default_security_group_id": "sg-03fab707fe97a8077",
            "dhcp_options_id": "dopt-03ba6a76d2787fbbb",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fe8123815f6f57a8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cea9bd07a1bb4034",
            "owner_id": "050451370848",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "terraweek-dev-VPC",
              "Project": "terraweek"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "terraweek-dev-VPC",
              "Project": "terraweek"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}